# eid-card-access-management

./: .gitignore  CMakeLists.txt  contributors.txt
include/: base.h  cert_registration.h
src/: authsystem.h  cardloader.cpp  cardloader.h  data.c  identitycard.h  main.cpp  sdlcardview.cpp  sdlcardview.h
